--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Localisation sur le plan</h1>
+    <h1> plan</h1>
 
     <div id="map-container">
         <img id="map" src="plan_hopital.jpg" alt="Plan de l'hôpital">
