--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="plan_hopital.jpg" id="map-image" alt="Plan de l'hôpital">
         <div id="user-location"></div> <!-- Point bleu de géolocalisation -->
     </div>
-    <button id="location-btn">Activer la localisationn</button>
+    <button id="location-btn">Activer la localisation</button>
     <script>
 
         let watchID = null;
@@ -29,43 +29,7 @@ function startTracking() {
     }
 }
 
-// Met à jour la position sur le plan
-function updatePosition(position) {
-    let accuracy = position.coords.accuracy;
-    let longitude = position.coords.longitude;
-    let latitude = position.coords.latitude;
-
-    console.log(`Position utilisateur: ${longitude}, ${latitude} (Précision: ${accuracy}m)`);
-
-    // Si la précision est mauvaise, on ignore
-    if (accuracy > 20) {
-        console.warn("Position ignorée car trop imprécise.");
-        return;
-    }
-
-    // Définition des bornes GPS du plan
-    let longitude_min = 1.4598, longitude_max = 1.4602;
-    let latitude_min = 43.6280, latitude_max = 43.6277;
-
-    console.log("Longitude min/max:", longitude_min, longitude_max);
-    console.log("Latitude min/max:", latitude_min, latitude_max);
-
-    // Vérifier si l'utilisateur est dans la zone
-    if (longitude >= longitude_min && longitude <= longitude_max && latitude <= latitude_min && latitude >= latitude_max) {
-        let longitude_percentage = ((longitude - longitude_min) / (longitude_max - longitude_min)) * 100;
-        let latitude_percentage = ((latitude_min - latitude) / (latitude_min - latitude_max)) * 100;
-
-        console.log(`Position en % sur le plan: X=${longitude_percentage}%, Y=${latitude_percentage}%`);
-
-      
-let userLocation = document.getElementById("user-location");
-userLocation.style.left = "50%";
-userLocation.style.top = "50%";
-userLocation.style.display = "block"; // Forcer l'affichage
-console.log("✅ Point affiché au centre !");
-    }}
-
-// Gère les erreurs GPS
+// Fonction pour afficher les erreurs de géolocalisation
 function showError(error) {
     switch (error.code) {
         case error.PERMISSION_DENIED:
@@ -82,7 +46,48 @@ function showError(error) {
     }
 }
 
-// Bouton pour activer la localisation
+// Met à jour la position du point sur le plan
+function updatePosition(position) {
+    let accuracy = position.coords.accuracy;
+    let longitude = position.coords.longitude;
+    let latitude = position.coords.latitude;
+
+    // Affichage des coordonnées dans la console pour débogage
+    console.log("📍 Position utilisateur : Longitude =", longitude, "Latitude =", latitude, "Précision =", accuracy, "m");
+
+    // Si la précision est trop mauvaise, on ignore cette position
+    if (accuracy > 20) {
+        console.warn("Position ignorée car trop imprécise.");
+        return;
+    }
+
+    // Bornes GPS du plan de l'hôpital
+    let longitude_min = 1.4598, longitude_max = 1.4602;
+    let latitude_min = 43.6280, latitude_max = 43.6277;
+
+    console.log("🖼️ Bornes du plan : Longitude min/max =", longitude_min, longitude_max, "Latitude min/max =", latitude_min, latitude_max);
+
+    // Calcul de la position sur le plan en pourcentage
+    let longitude_percentage = ((longitude - longitude_min) / (longitude_max - longitude_min)) * 100;
+    let latitude_percentage = ((latitude_min - latitude) / (latitude_min - latitude_max)) * 100;
+
+    console.log("🎯 Position sur le plan (en %) : X =", longitude_percentage, "%", "Y =", latitude_percentage, "%");
+
+    // Vérifie si l'utilisateur est bien dans la zone définie
+    if (longitude >= longitude_min && longitude <= longitude_max && latitude <= latitude_min && latitude >= latitude_max) {
+        // Positionnement du point bleu
+        let userLocation = document.getElementById("user-location");
+        userLocation.style.left = longitude_percentage + "%";
+        userLocation.style.top = latitude_percentage + "%";
+        userLocation.style.display = "block"; // Affichage du point
+        console.log("✅ Point géolocalisé au centre de l'écran");
+    } else {
+        alert("Vous êtes en dehors de la zone définie.");
+        console.warn("Position hors de la zone !");
+    }
+}
+
+// Bouton pour activer la géolocalisation
 document.getElementById("location-btn").addEventListener("click", startTracking);
 
     </script>
